--- a/style.css
+++ b/style.css
@@ -91,7 +91,9 @@ body {
     align-items: center;
     justify-content: center;
 }
-
+#navbar.active{
+    right: 0px;
+}
 #navbar li {
     list-style: none;
     padding: 0 20px;
