--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ button.white {
     color: #fff;
     background-color: transparent;
     cursor: pointer;
-    border:1px solid #fff;
+    border: 1px solid #fff;
     outline: none;
     transition: 0.2s;
 }
@@ -91,9 +91,11 @@ body {
     align-items: center;
     justify-content: center;
 }
-#navbar.active{
+
+#navbar.active {
     right: 0px;
 }
+
 #navbar li {
     list-style: none;
     padding: 0 20px;
@@ -128,7 +130,7 @@ body {
     left: 20px;
 }
 
-#mobile{
+#mobile {
     display: none;
     align-items: center;
 }
@@ -371,7 +373,8 @@ body {
     background-position: center;
     padding: 30px;
 }
-#sm-banner .banner-box-2{
+
+#sm-banner .banner-box-2 {
     background-image: url('img/banner//b10.jpg');
 }
 
@@ -393,17 +396,20 @@ body {
     font-weight: 500;
     padding-bottom: 15px;
 }
-#sm-banner .banner-box:hover button{
-    background:#088178 ;
+
+#sm-banner .banner-box:hover button {
+    background: #088178;
     border: 1px solid #088178;
 }
-#banner3{
+
+#banner3 {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     padding: 0 80px;
 
 }
+
 #banner3 .banner-box {
     display: flex;
     flex-direction: column;
@@ -417,50 +423,60 @@ body {
     padding: 20px;
     margin-bottom: 20px;
 }
-#banner3 .banner-box2{
+
+#banner3 .banner-box2 {
     background-image: url('img/banner/b4.jpg');
 }
-#banner3 .banner-box3{
+
+#banner3 .banner-box3 {
     background-image: url('img/banner/b18.jpg');
 }
-#banner3 h2{
+
+#banner3 h2 {
     color: #fff;
     font-weight: 900;
     font-size: 22px;
 }
-#banner3 h3{
+
+#banner3 h3 {
     color: #ec544e;
     font-weight: 800;
     font-size: 15px;
 }
-#newsletter{
+
+#newsletter {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
     background-image: url('img/banner/b14.png');
-    background-repeat:  no-repeat;
-    background-position:20% 30% ;
+    background-repeat: no-repeat;
+    background-position: 20% 30%;
     background-color: #041e42;
 }
-#newsletter h4{
+
+#newsletter h4 {
     font-size: 22px;
     font-weight: 700;
     color: #fff;
 }
-#newsletter p{
+
+#newsletter p {
     font-size: 14px;
     font-weight: 600;
     color: #818ea0;
 }
-#newsletter p span{
+
+#newsletter p span {
     color: #ffbd27;
 }
-#newsletter form{
+
+#newsletter form {
     display: flex;
     width: 40%;
 }
-#newsletter input{
+
+#newsletter input {
     height: 3.125rem;
     padding: 0 1.25em;
     font-size: 14px;
@@ -475,50 +491,60 @@ body {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
 }
-#newsletter button{
-    background-color:#088178 ;
+
+#newsletter button {
+    background-color: #088178;
     color: #fff;
     white-space: nowrap;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
 }
-footer{
+
+footer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
-footer .col{
+
+footer .col {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-bottom:20px ;
+    margin-bottom: 20px;
 }
-footer .logo{
- margin-bottom: 30px;   
+
+footer .logo {
+    margin-bottom: 30px;
 }
-footer h4{
+
+footer h4 {
     font-size: 14px;
     padding-bottom: 20px;
 }
-footer p{
+
+footer p {
     font-size: 13px;
-    margin:  0 0 8px 0 ;
+    margin: 0 0 8px 0;
 }
-footer a{
+
+footer a {
     font-size: 13px;
     text-decoration: none;
     color: #222;
     margin-bottom: 10px;
 }
-footer .follow{
-margin-top: 20px;
+
+footer .follow {
+    margin-top: 20px;
 }
-footer .follow i{
+
+footer .follow i {
     color: #465b52;
     padding-right: 4px;
     cursor: pointer;
 }
-footer .install .row img{
+
+footer .install .row img {
     border: 1px solid #088178;
     border-radius: 6px;
     -webkit-border-radius: 6px;
@@ -526,49 +552,120 @@ footer .install .row img{
     -ms-border-radius: 6px;
     -o-border-radius: 6px;
 }
-footer .install img{
-margin: 10px 0 15px 0;
+
+footer .install img {
+    margin: 10px 0 15px 0;
 }
 
 footer .follow i:hover,
-footer a:hover{
+footer a:hover {
     color: #088178;
 }
 
-footer .copyright{
+footer .copyright {
     width: 100%;
     text-align: center;
 }
 
+#close {
+    display: none;
+}
 
 /* Start Media Query */
 
 @media (max-width:799px) {
-    #navbar{
+    .section-p1 {
+        padding: 40px 40px;
+    }
+
+    #navbar {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         justify-content: flex-start;
         position: fixed;
-        top:0 ;
+        top: 0;
         right: -300px;
         height: 100vh;
         width: 300px;
         background-color: #e3e6f3;
         box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
         padding: 80px 0 0 10px;
+        transition: 0.3s;
+        -webkit-transition: 0.3s;
+        -moz-transition: 0.3s;
+        -ms-transition: 0.3s;
+        -o-transition: 0.3s;
     }
-    #navbar li{
+
+    #navbar li {
         margin-bottom: 25px;
     }
 
-    #mobile{
+    #mobile {
         display: flex;
         align-items: center;
     }
+
     #mobile i {
         color: #1a1a1a;
         font-size: 24px;
         padding-left: 20px;
+    }
+
+    #close {
+        display: initial;
+        position: absolute;
+        top: 30px;
+        left: 30px;
+        color: #222;
+        font-size: 24px;
+    }
+
+    #lg-bag {
+        display: none;
+    }
+
+    #hero {
+        height: 70vh;
+        padding: 0 80px;
+        background-position: top 30% right 30%;
+    }
+
+    #feature {
+        justify-content: center;
+    }
+
+    #feature .fe-box {
+        margin: 15px 15px;
+    }
+
+    #product1 .pro-container {
+        justify-content: center;
+    }
+
+    #product1 .pro {
+        margin: 15px;
+    }
+
+    #banner {
+        height: 20vh;
+    }
+
+    #sm-banner .banner-box {
+        min-width: 100%;
+        height: 30vh;
+    }
+
+    #banner3 {
+              padding: 0 40px;
+    }
+
+    #banner3 .banner-box{
+        width: 28%;
+    }
+    #newsletter form {
+       
+        width: 70%;
     }
 }
