--- a/style.css
+++ b/style.css
@@ -658,14 +658,48 @@ footer .copyright {
     }
 
     #banner3 {
-              padding: 0 40px;
+        padding: 0 40px;
     }
 
-    #banner3 .banner-box{
+    #banner3 .banner-box {
         width: 28%;
     }
+
     #newsletter form {
-       
+
         width: 70%;
     }
+}
+
+@media (max-width:477px) {
+    .section-p1 {
+        padding: 20px;
+    }
+
+    #header {
+        padding: 10px 30px;
+    }
+
+    h1 {
+        font-size: 38px;
+    }
+
+    h2 {
+        font-size: 32px;
+
+    }
+
+    #hero {
+        padding: 0 20px;
+        background-position: 55%;
+    }
+
+    #feature .fe-box {
+        width: 155px;
+        margin: 0  0 15px 0;
+    }
+    #feature {
+        justify-content: space-between;
+    }
+
 }
