--- a/style.css
+++ b/style.css
@@ -570,6 +570,51 @@ footer .copyright {
 #close {
     display: none;
 }
+/* shop page */
+#page-header{
+    background-image: url('img/banner/b1.jpg');
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction:column ;
+    padding: 14px;
+
+}
+#page-header h2,
+#page-header p{
+    color: #fff;
+}
+#pagination{
+    text-align: center;
+}
+#pagination a{
+    text-decoration: none;
+    background-color: #088178;
+    padding: 15px 20px;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+    color: #fff;
+    font-weight: 600;
+}
+#pagination i{
+    font-size: 16px;
+    font-weight: 600;
+}
+/* single product */
+
+
+/* blog page */
+
+
+/* about page */
+
+/* contact page */
 
 /* Start Media Query */
 
