--- a/style.css
+++ b/style.css
@@ -827,4 +827,17 @@ margin-right: 50px;
     footer .copyright{
         text-align: start;
     }
+    /* single product */
+    #prodetails {
+        display: flex;
+      flex-direction: column;
+    }
+    #prodetails .single-pro-image {
+        width: 100%;
+        margin-right: 0px;
+    }
+    #prodetails .single-pro-details {
+        width: 100%;
+       
+    }
 }
